--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Models
+models/
+
+# Datasets
+datasets/
+
 # Python-generated files
 __pycache__/
 *.py[oc]
@@ -8,3 +14,6 @@ wheels/
 
 # Virtual environments
 .venv
+
+# Other files and folders
+.DS_Store
